[package]
name = "jencli"
version = "0.4.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.72"

clap = "4.3.19"

config = { version = "0.13.3", features = ["yaml"] }

serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"

reqwest = { version = "0.11.18", features = ["blocking", "json", "rustls-tls"] }

void = "1.0.2"
urlencoding = "2.1.3"

log = "0.4"
log4rs = "1.2.0"

[dev-dependencies]
fake = "2"
